--- a/v1/training/main.ipynb
+++ b/v1/training/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -341,8 +341,7 @@
    ],
    "source": [
     "# 加载用户时间序列数据\n",
-    "# data_path = 'processed_data/c7_user_DrrEIEW_timeseries.csv'\n",
-    "data_path = 'processed_data/c7_user_DrrEIEW_timeseries.csv'\n",
+    "data_path = '../processed_data/c7_user_DrrEIEW_timeseries.csv'\n",
     "df = pd.read_csv(data_path)\n",
     "\n",
     "# 查看数据基本信息\n",
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
