feat: folder restructure and v2 readme, prediction part to be continued

--- a/ml_engine/v1/training/main.ipynb
+++ b/ml_engine/v1/training/main.ipynb
@@ -1748,23 +1748,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ## Conclusions and Future Improvements\n",
-    "# \n",
-    "# 1. Model Performance Comparison:\n",
-    "#    - XGBoost and random forest models based on trees generally outperform traditional time series models\n",
-    "#    - Time features and lag features are very important for prediction\n",
-    "# \n",
-    "# 2. Feature Importance Discovery:\n",
-    "#    - Lag features (especially short-term lag) are the most important predictive factors\n",
-    "#    - Rolling mean features provide stable trend information\n",
-    "#    - Time features (hour, day of the week) are important for capturing periodic patterns\n",
-    "# \n",
-    "# 3. Future Improvement Directions:\n",
-    "#    - Try deep learning models (LSTM, GRU) that may better capture long-term dependencies\n",
-    "#    - Add more external features, such as system load, other user activities, etc.\n",
-    "#    - Implement more complex logic for multi-step prediction, reducing error accumulation\n",
-    "#    - Consider multi-variable prediction (predicting CPU and memory simultaneously)\n",
-    "#    - Implement anomaly detection mechanisms to improve prediction robustness"
+    "## Conclusions and Future Improvements\n",
+    " \n",
+    "1. Model Performance Comparison:\n",
+    "   - XGBoost and random forest models based on trees generally outperform traditional time series models\n",
+    "   - Time features and lag features are very important for prediction\n",
+    "\n",
+    "2. Feature Importance Discovery:\n",
+    "   - Lag features (especially short-term lag) are the most important predictive factors\n",
+    "   - Rolling mean features provide stable trend information\n",
+    "   - Time features (hour, day of the week) are important for capturing periodic patterns\n",
+    " \n",
+    "3. Future Improvement Directions:\n",
+    "   - Try deep learning models (LSTM, GRU) that may better capture long-term dependencies\n",
+    "   - Add more external features, such as system load, other user activities, etc.\n",
+    "   - Implement more complex logic for multi-step prediction, reducing error accumulation\n",
+    "   - Consider multi-variable prediction (predicting CPU and memory simultaneously)\n",
+    "   - Implement anomaly detection mechanisms to improve prediction robustness"
    ]
   }
  ],
