--- a/ml_engine/v2/preprocessing/main.ipynb
+++ b/ml_engine/v2/preprocessing/main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# 实时负载预测与资源管理 - 数据预处理\n",
     "\n",
-    "本笔记本专注于从用户视角进行负载预测的第一步：数据预处理。我们将使用Google集群数据集中的cluster_1数据。"
+    "本笔记本专注于从用户视角进行负载预测的第一步：数据预处理。我们将使用Google集群数据集中的cluster_7数据。"
    ]
   },
   {
@@ -372,8 +372,8 @@
     }
    ],
    "source": [
-    "# 读取cluster_1数据\n",
-    "data_path = 'data/cluster_7.csv'\n",
+    "# 读取 cluster_7 数据\n",
+    "data_path = '../../data/cluster_7.csv'\n",
     "data_prefix = 'c7'\n",
     "try:\n",
     "    # 先读取少量数据以了解数据结构\n",
@@ -1898,7 +1898,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "创建输出目录: processed_all_fields_data\n",
       "保存用户fxHzmdZ8NxlpSAB2NMTz02oSA605plu5LH/Lvceltzs=的时间序列数据,共2215条记录,文件名为user_fxHzmdZ_timeseries.csv\n",
       "保存用户+cz+wEXttqDjld+YWLmrgqExjdqiHMZ2WZODThyR9jE=的时间序列数据,共415条记录,文件名为user_czwEXtt_timeseries.csv\n",
       "保存用户DrrEIEWkWuW7RrZwpHLCN0k0A2J0usJeyt3wtqzZ7Kk=的时间序列数据,共24348条记录,文件名为user_DrrEIEW_timeseries.csv\n",
@@ -2056,7 +2055,7 @@
     "# 保存处理后的数据\n",
     "try:\n",
     "    # 创建输出目录\n",
-    "    output_dir = \"processed_all_fields_data\"\n",
+    "    output_dir = \"../processed_data\"\n",
     "    if not os.path.exists(output_dir):\n",
     "        os.makedirs(output_dir)\n",
     "        print(f\"创建输出目录: {output_dir}\")\n",
@@ -2086,7 +2085,7 @@
     "            cols_to_exclude = ['time', 'start_time', 'end_time', 'resource_request', 'average_usage' ,'maximum_usage']\n",
     "            user_data = user_data.drop(columns=[col for col in cols_to_exclude if col in user_data.columns])\n",
     "\n",
-    "            user_data.to_csv(f'processed_all_fields_data/{data_prefix}_user_{clean_id}_timeseries.csv', index=False)\n",
+    "            user_data.to_csv(f'../processed_data/{data_prefix}_user_{clean_id}_timeseries.csv', index=False)\n",
     "            print(f\"保存用户{user}的时间序列数据,共{len(user_data)}条记录,文件名为user_{clean_id}_timeseries.csv\")\n",
     "            qualified_users += 1\n",
     "            \n",
@@ -2197,7 +2196,7 @@
     "## 4. 总结与下一步\n",
     "\n",
     "在这个笔记本中，我们完成了以下工作：\n",
-    "1. 加载并探索了cluster_1的数据\n",
+    "1. 加载并探索了cluster_7的数据\n",
     "2. 处理了时间特征\n",
     "3. 提取了用户视角的关键特征\n",
     "4. 处理了资源使用信息\n",
