--- a/ml_engine/v2/training/main.ipynb
+++ b/ml_engine/v2/training/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 实时负载预测与资源管理 - 高级建模 (main3)\n",
+    "# 实时负载预测与资源管理 - 高级建模\n",
     "\n",
     "本笔记本将使用扩展特征集实现更先进的预测模型。基于处理过的数据，我们将探索更复杂的特征工程和模型架构。"
    ]
@@ -70,7 +70,7 @@
    "outputs": [],
    "source": [
     "# 加载扩展特征集的数据\n",
-    "data_path = 'processed_all_fields_data/c7_user_fxHzmdZ_timeseries.csv'\n",
+    "data_path = '../processed_data/c7_user_fxHzmdZ_timeseries.csv'\n",
     "\n",
     "try:\n",
     "    df = pd.read_csv(data_path)\n",
