feat: create image for compare result and make main training right

--- a/ml_engine/training/RF.ipynb
+++ b/ml_engine/training/RF.ipynb
@@ -1030,17 +1030,17 @@
     "    plt.figure(figsize=(12, 6))\n",
     "    plt.plot(range(len(y_true)), y_true, 'k-', label='True Value')\n",
     "\n",
-    "    for model_name, preds in predictions_dict.items():\n",
-    "        plt.plot(range(len(preds)), preds, '--', label=f'{model_name} Prediction')\n",
+    "    #for model_name, preds in predictions_dict.items():\n",
+    "    #    plt.plot(range(len(preds)), preds, '--', label=f'{model_name} Prediction')\n",
     "\n",
-    "    plt.title(f\"{title_prefix} - Overview\")\n",
-    "    plt.xlabel('Time')\n",
-    "    plt.ylabel('Target Value')\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.tight_layout()\n",
+    "    #plt.title(f\"{title_prefix} - Overview\")\n",
+    "    #plt.xlabel('Time')\n",
+    "    #plt.ylabel('Target Value')\n",
+    "    #plt.legend()\n",
+    "    #plt.grid(True)\n",
+    "    #plt.tight_layout()\n",
     "    #plt.savefig(f\"{title_prefix.replace(' ', '_')}_overview.png\")\n",
-    "    plt.show()\n",
+    "    #plt.show()\n",
     "\n",
     "    # Then, create a separate chart for each model\n",
     "    for model_name, preds in predictions_dict.items():\n",
