refactor: ml engine process time_dt floor to min

--- a/ml_engine/prediction/RF.ipynb
+++ b/ml_engine/prediction/RF.ipynb
@@ -124,8 +124,10 @@
     "    else:\n",
     "        print(\"Warning: Scaler does not have feature_names_in_ attribute. Using all non-target columns as features.\")\n",
     "        # Remove time columns, target columns and any string/object columns\n",
-    "        X = df_copy.drop(columns=[col for col in df_copy.columns if col in target_vars or col.startswith('time_')\n",
-    "                                 or col == 'user' or col == 'user_id' or col.startswith('user_')])\n",
+    "        X = df_copy.drop(columns=[col for col in df_copy.columns \n",
+    "                                if col in target_vars \n",
+    "                                or col.startswith('time_')\n",
+    "                                or col == 'user' or col == 'user_id' or col.startswith('user_')])\n",
     "        \n",
     "    # Ensure all data is numeric before scaling\n",
     "    # Check for any remaining non-numeric columns (like datetime or string columns)\n",
@@ -168,6 +170,16 @@
     "    df_with_preds = df.copy()\n",
     "    df_with_preds[f'{target_var}_predicted'] = predictions\n",
     "    \n",
+    "    # Handle duplicate timestamps if time_dt column exists\n",
+    "    if 'time_dt' in df_with_preds.columns:\n",
+    "        # Check for duplicates\n",
+    "        time_dt_col = 'time_dt'\n",
+    "        df_with_preds[time_dt_col] = pd.to_datetime(df_with_preds[time_dt_col])\n",
+    "        \n",
+    "        dup_count = df_with_preds[time_dt_col].duplicated().sum()\n",
+    "        if dup_count > 0:\n",
+    "            print(f\"Warning: Found {dup_count} duplicate timestamps after prediction.\")\n",
+    "    \n",
     "    print(f\"Generated {len(predictions)} predictions\")\n",
     "    return df_with_preds, predictions"
    ]
@@ -186,12 +198,35 @@
     "        print(f\"Error: Prediction column {prediction_col} not found\")\n",
     "        return\n",
     "    \n",
+    "    # Create a copy to work with\n",
+    "    df_vis = df.copy()\n",
+    "    \n",
+    "    # Handle duplicate timestamps if using time as x-axis\n",
+    "    if 'time_dt' in df_vis.columns and use_time:\n",
+    "        # Ensure time_dt is datetime\n",
+    "        df_vis['time_dt'] = pd.to_datetime(df_vis['time_dt'])\n",
+    "        \n",
+    "        # Check for duplicates\n",
+    "        dup_count = df_vis['time_dt'].duplicated().sum()\n",
+    "        if dup_count > 0:\n",
+    "            print(f\"Found {dup_count} duplicate timestamps. Aggregating data points at minute precision.\")\n",
+    "            \n",
+    "            # Group by time_dt and aggregate values (mean)\n",
+    "            df_vis = df_vis.groupby('time_dt').agg({\n",
+    "                target_var: 'mean',\n",
+    "                prediction_col: 'mean'\n",
+    "            }).reset_index()\n",
+    "    \n",
     "    # Sample if too many data points\n",
-    "    if len(df) > max_points:\n",
-    "        df_sample = df.sample(max_points)\n",
+    "    if len(df_vis) > max_points:\n",
+    "        df_sample = df_vis.sample(max_points)\n",
     "        print(f\"Too many data points, randomly sampling {max_points} points for visualization\")\n",
     "    else:\n",
-    "        df_sample = df\n",
+    "        df_sample = df_vis\n",
+    "        \n",
+    "    # Sort by time if using time column\n",
+    "    if 'time_dt' in df_sample.columns and use_time:\n",
+    "        df_sample = df_sample.sort_values('time_dt')\n",
     "    \n",
     "    # Create visualization\n",
     "    plt.figure(figsize=(15, 6))\n",
@@ -247,8 +282,9 @@
     "    # Make a copy to avoid modifying the original\n",
     "    df_new = df.copy()\n",
     "    \n",
-    "    # Ensure time column is datetime type\n",
+    "    # Ensure time column is datetime type and floored to minute precision\n",
     "    df_new[time_col] = pd.to_datetime(df_new[time_col])\n",
+    "    df_new[time_col] = df_new[time_col].dt.floor('min')\n",
     "    \n",
     "    # Create datetime features\n",
     "    df_new['hour_of_day'] = df_new[time_col].dt.hour\n",
@@ -363,7 +399,11 @@
     "    \n",
     "    # Create future dataframe\n",
     "    future_df = pd.DataFrame({time_col: future_times})\n",
-    "    print(f\"Created dataframe with {len(future_df)} future time points\")\n",
+    "        \n",
+    "    # Floor timestamps to minute precision (ignoring seconds)\n",
+    "    future_df[time_col] = future_df[time_col].dt.floor('min')\n",
+    "    \n",
+    "    print(f\"Created dataframe with {len(future_df)} future time points (minute precision)\")\n",
     "    \n",
     "    return future_df"
    ]
@@ -389,7 +429,8 @@
     "    time_col = 'time_dt'\n",
     "    if time_col in working_df.columns:\n",
     "        working_df[time_col] = pd.to_datetime(working_df[time_col])\n",
-    "    \n",
+    "        # Floor historical timestamps to minute precision\n",
+    "        working_df[time_col] = working_df[time_col].dt.floor('min') \n",
     "    # Sort by time\n",
     "    if time_col in working_df.columns:\n",
     "        working_df = working_df.sort_values(time_col).reset_index(drop=True)\n",
@@ -617,16 +658,55 @@
    "source": [
     "def visualize_future_predictions(historical_df, future_df, target_var, user_id, time_col='time_dt'):\n",
     "    \"\"\"Visualize historical data and future predictions\"\"\"\n",
+    "    # Create copies to work with\n",
+    "    hist_df = historical_df.copy()\n",
+    "    fut_df = future_df.copy()\n",
+    "    \n",
+    "    # Handle duplicate timestamps in both dataframes\n",
+    "    if time_col in hist_df.columns:\n",
+    "        # Ensure time column is datetime type\n",
+    "        hist_df[time_col] = pd.to_datetime(hist_df[time_col])\n",
+    "        \n",
+    "        # Check for duplicates\n",
+    "        dup_count = hist_df[time_col].duplicated().sum()\n",
+    "        if dup_count > 0:\n",
+    "            print(f\"Found {dup_count} duplicate historical timestamps. Aggregating data points.\")\n",
+    "            \n",
+    "            # Group by time_col and aggregate values (mean)\n",
+    "            hist_df = hist_df.groupby(time_col).agg({\n",
+    "                target_var: 'mean'\n",
+    "            }).reset_index()\n",
+    "            \n",
+    "        # Sort by time\n",
+    "        hist_df = hist_df.sort_values(time_col)\n",
+    "    \n",
+    "    if time_col in fut_df.columns:\n",
+    "        # Ensure time column is datetime type\n",
+    "        fut_df[time_col] = pd.to_datetime(fut_df[time_col])\n",
+    "        \n",
+    "        # Check for duplicates\n",
+    "        dup_count = fut_df[time_col].duplicated().sum()\n",
+    "        if dup_count > 0:\n",
+    "            print(f\"Found {dup_count} duplicate future timestamps. Aggregating data points.\")\n",
+    "            \n",
+    "            # Group by time_col and aggregate values (mean)\n",
+    "            fut_df = fut_df.groupby(time_col).agg({\n",
+    "                target_var: 'mean'\n",
+    "            }).reset_index()\n",
+    "            \n",
+    "        # Sort by time\n",
+    "        fut_df = fut_df.sort_values(time_col)\n",
+    "    \n",
     "    plt.figure(figsize=(15, 6))\n",
     "    \n",
-    "    # Plot historical data\n",
-    "    plt.plot(historical_df[time_col].iloc[-100:], historical_df[target_var].iloc[-100:], 'b-', label='Historical data')\n",
+    "    # Plot historical data - use last 100 data points only\n",
+    "    plt.plot(hist_df[time_col].iloc[-100:], hist_df[target_var].iloc[-100:], 'b-', label='Historical data')\n",
     "    \n",
     "    # Plot future predictions\n",
-    "    plt.plot(future_df[time_col], future_df[target_var], 'r--', label='Future predictions')\n",
+    "    plt.plot(fut_df[time_col], fut_df[target_var], 'r--', label='Future predictions')\n",
     "    \n",
     "    # Add vertical line to mark prediction start\n",
-    "    plt.axvline(x=historical_df[time_col].max(), color='green', linestyle='--', label='Prediction start')\n",
+    "    plt.axvline(x=hist_df[time_col].max(), color='green', linestyle='--', label='Prediction start')\n",
     "    \n",
     "    plt.xlabel('Time')\n",
     "    plt.ylabel(target_var)\n",
@@ -1303,7 +1383,12 @@
     "df = pd.read_csv(data_path)\n",
     "print(f\"Successfully read data, shape: {df.shape}\")\n",
     "\n",
-    "        # Check if user information exists\n",
+    "# Process time features if present\n",
+    "if 'time_dt' in df.columns:\n",
+    "    df['time_dt'] = pd.to_datetime(df['time_dt']).dt.floor('min')\n",
+    "    print(\"Processed time_dt column to minute precision\")\n",
+    "\n",
+    "# Check if user information exists\n",
     "user_columns = [col for col in df.columns if col == 'user' or col == 'user_id' or col.startswith('user_')]\n",
     "if user_columns:\n",
     "    print(f\"Found user information columns: {', '.join(user_columns)}\")\n",
@@ -1356,6 +1441,10 @@
     "        )\n",
     "        \n",
     "        if future_df is not None:\n",
+    "            # Make sure time_dt is floored to minute precision\n",
+    "            if 'time_dt' in future_df.columns:\n",
+    "                future_df['time_dt'] = pd.to_datetime(future_df['time_dt']).dt.floor('min')\n",
+    "                \n",
     "            # Visualize future predictions\n",
     "            visualize_future_predictions(df_features, future_df, target_var, clean_user_id(future_df['user'].iloc[0]))\n",
     "            \n",
